tests/samples/valid/void_function.pn

fn foo()
{
	end:
}

fn main() -> i32
{
	foo();
	return: 200
}
