tests/samples/invalid/declare_builtin.pn
fn foo!() -> i32
{
	return: 42
}

fn main() -> i32
{
	var x = foo!();
	return: x
}
